--- a/style.css
+++ b/style.css
@@ -2,10 +2,7 @@ body{
 	background-color: white;
 	border-style: solid;
 	border-color: red;
-	margin-top: 50px;
-	margin-bottom: 50px;
-	margin-left: 50px;
-	margin-right: 50px;
+	border-width: 50px;
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 	text-align: center;
 }
