--- a/style.css
+++ b/style.css
@@ -2,7 +2,11 @@ body{
 	background-color: white;
 	border-style: solid;
 	border-color: red;
-	border-width: 50px;
+	border-width: 10px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	margin-left: 0px;
+	margin-right: 0px;
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 	text-align: center;
 }
