--- a/style.css
+++ b/style.css
@@ -10,3 +10,8 @@ body{
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 	text-align: center;
 }
+
+nav{
+	background-color: red;
+	color: white;
+}
