--- a/style.css
+++ b/style.css
@@ -3,10 +3,8 @@ body{
 	border-style: solid;
 	border-color: red;
 	border-width: 10px;
-	margin-top: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-	margin-right: 0px;
+	margin: 0px;
+	padding: 0px;
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 	text-align: center;
 }
