--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 body{
-	background-color: white;
-	border-style: solid;
-	border-color: red;
-	border-width: 10px;
+	background-color: red;
 	margin: 0px;
 	padding: 0px;
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 	text-align: center;
+}
+
+#content{
+	background-color: white;
+	margin: 20px;
 }
