--- a/style.css
+++ b/style.css
@@ -1,12 +1,8 @@
-body{
-	background-color: red;
+html{
+	background-color: white;
+	border: 20px solid red;
 	margin: 0px;
 	padding: 0px;
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 	text-align: center;
-}
-
-#content{
-	background-color: white;
-	margin: 20px;
 }
