--- a/style.css
+++ b/style.css
@@ -4,5 +4,8 @@ html{
 	margin: 0px;
 	padding: 0px;
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+h1{
 	text-align: center;
 }
